--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --watch",
+    "prebuild": "npx eslint .",
     "build": "npx webpack",
-    "serve": "npx webpack-dev-server"
+    "prestart": "npx eslint ./",
+    "start": "webpack-dev-server --watch --mode=development"
   },
   "license": "MIT",
   "dependencies": {
@@ -17,6 +18,8 @@
     "url": "https://github.com/minhnguyenduy99/Game-with-PixiJS.git"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
