--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,13 +4,15 @@
         "es6": true,
         "node": true
     },
+    "ignorePatterns": ["dist/**", "webpack.config.js"],
     "extends": "eslint:recommended",
     "globals": {
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
     "parserOptions": {
-        "ecmaVersion": 2018
+        "ecmaVersion": 2018,
+        "sourceType": "module"
     },
     "rules": {
     }
