--- a/package.json
+++ b/package.json
@@ -5,22 +5,30 @@
   "scripts": {
     "prebuild": "npx eslint .",
     "build": "npx webpack",
-    "prestart": "npx eslint ./",
-    "start": "webpack-dev-server --watch --mode=development"
+    "prestart": "yarn build",
+    "start": "webpack-dev-server --watch"
   },
   "license": "MIT",
-  "dependencies": {
-    "bootstrap": "^4.4.1",
-    "pixi.js": "^5.2.1"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/minhnguyenduy99/Game-with-PixiJS.git"
   },
+  "dependencies": {
+    "bootstrap": "^4.4.1",
+    "pixi.js": "^5.2.1"
+  },
   "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "babel-loader": "^8.0.6",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.4.2",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "style-loader": "^1.1.3",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
