--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,10 +10,14 @@
         "Atomics": "readonly",
         "SharedArrayBuffer": "readonly"
     },
+    "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2018,
         "sourceType": "module"
     },
     "rules": {
+        "no-undef": 0,
+        "no-func-assign": 0,
+        "no-unused-vars": 0
     }
 }
