--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "prebuild": "npx eslint .",
+    "lint": "npx eslint . --fix",
+    "prebuild": "yarn lint",
     "build": "npx webpack",
     "prestart": "yarn build",
     "start": "webpack-dev-server --watch"
@@ -15,11 +16,15 @@
   },
   "dependencies": {
     "bootstrap": "^4.4.1",
-    "pixi.js": "^5.2.1"
+    "pixi.js": "^5.2.1",
+    "pixi.js-keyboard": "^1.0.9",
+    "pixi.js-mouse": "^1.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.8.7",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
     "@babel/preset-env": "^7.8.7",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.4.2",
