--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,6 +19,7 @@
         "no-undef": 0,
         "no-func-assign": 0,
         "no-unused-vars": 0,
-        "no-empty": 0
+        "no-empty": 0,
+        "no-unsafe-finally": 0
     }
 }
